--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node --es-module-specifier-resolution=node ./src/app.js",
-    "dev": "nodemon --es-module-specifier-resolution=node ./src/app.js",
+    "start": "node --es-module-specifier-resolution=node app.js",
+    "dev": "nodemon --es-module-specifier-resolution=node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
