--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URL = 'mongodb+srv://alireza:alirezajj%4098@cluster0.xjammca.mongodb.net/?retryWrites=true&w=majorityt'
+MONGO_URL = 'mongodb+srv://alireza:alirezajj%4098@cluster0.xjammca.mongodb.net/?retryWrites=true'
 API_PORT = 8080
+PRIVATE_KEY = 'myProject@!'
