--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,15 @@
          "ecmaVersion": 12,
          "sourceType": "module"
     },
-    "extends": ["eslint:recommended", "prettier"],
+    "extends": ["eslint:recommended", "prettier", "plugin:prettier/recommended"],
     "env": { 
          "es2021": true,
          "node": true
     },
+    "plugins": ["prettier"],
     "rules": {
-     //     "no-console": "error"
-    }
+     // "prettier/prettier": 1
+         "no-console": "error"
+    },
+    "eslint.validate": [ "javascript", "javascriptreact", "html", "typescriptreact" ]
 }
