--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
+    "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
     "validator": "^13.7.0"
   },
