--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.6.2",
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.5.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
